// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`accordion-component renders closed by default (with hidden/inert panel) 1`] = `
<accordion-component target-id="section1">
  <!---->
  <div class="accordion-wrapper">
    <button-component aria-controls="section1" aria-expanded="false" class-names=" collapsed" data-target="section1" data-toggle="collapse" id="section1-header" target-id="section1">
      <!---->
      <button aria-controls="section1" aria-expanded="false" aria-label="Button" class="btn collapsed" data-target="section1" data-toggle="collapse" type="button">
        <span class="btn__content">
        </span>
      </button>
    </button-component>
    <div aria-hidden="true" aria-labelledby="section1-header" class="collapse" hidden="" id="section1" inert="" role="region" style="height: 0px; overflow: hidden; transition: height 0.35s ease; display: none;">
      <div class="accordion-body accordion-card"></div>
    </div>
  </div>
</accordion-component>
`;

exports[`accordion-component renders open by default when is-open is set (panel is not hidden/inert) 1`] = `
<accordion-component is-open="true" target-id="section2">
  <!---->
  <div class="accordion-wrapper">
    <button-component aria-controls="section2" aria-expanded="true" class-names=" " data-target="section2" data-toggle="collapse" id="section2-header" is-open="" target-id="section2">
      <!---->
      <button aria-controls="section2" aria-expanded="true" aria-label="Button" class="btn" data-target="section2" data-toggle="collapse" type="button">
        <span class="btn__content">
        </span>
      </button>
    </button-component>
    <div aria-labelledby="section2-header" class="collapse" id="section2" role="region" style="height: auto; overflow: hidden; transition: height 0.35s ease; display: block;">
      <div class="accordion-body accordion-card"></div>
    </div>
  </div>
</accordion-component>
`;
